<resources>
    <string name="app_name">MyFamily</string>
    <string name="security">Security</string>
    <string name="sos">SOS</string>
    <string name="sos_msg">In case of emergency, keep telling family members to contact</string>
    <string name="guard">GUARD</string>
    <string name="guard_msg">Open when you are on a potentially dangerous journey</string>
    <string name="home_menu">Home</string>
    <string name="dashboard_menu">Dashboard</string>
    <string name="guard_menu">Guard</string>
    <string name="profile_menu">Profile</string>
    <string name="my_family">My Family</string>
    <string name="profile">Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>