<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_16dp"
        android:elevation="@dimen/dimens_8dp"
        android:text="@string/security"
        android:textColor="@color/black"
        android:textSize="@dimen/dimens_16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        app:cardElevation="@dimen/dimens_16dp"
        android:id="@+id/pink_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_180dp"
        android:layout_margin="@dimen/dimens_16dp"
        app:cardBackgroundColor="@color/froly"
        app:cardCornerRadius="@dimen/dimens_16dp"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <TextView
        android:id="@+id/text_sos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_16dp"
        android:elevation="@dimen/dimens_16dp"
        android:text="@string/sos"
        android:textColor="@color/white"
        android:textSize="@dimen/dimens_24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card" />

    <ImageView
        android:id="@+id/image_sos"
        android:layout_width="@dimen/dimens_96dp"
        android:layout_height="@dimen/dimens_96dp"
        android:layout_margin="@dimen/dimens_16dp"
        android:elevation="@dimen/dimens_16dp"
        android:src="@drawable/ic_sos"
        app:layout_constraintBottom_toBottomOf="@id/pink_card"
        app:layout_constraintEnd_toEndOf="@id/pink_card"
        app:layout_constraintTop_toTopOf="@id/pink_card" />


    <TextView
        android:id="@+id/text_sos_msg"
        android:layout_width="@dimen/dimens_0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_16dp"
        android:elevation="@dimen/dimens_16dp"
        android:text="@string/sos_msg"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/image_sos"
        app:layout_constraintStart_toStartOf="@id/pink_card"
        app:layout_constraintTop_toBottomOf="@id/text_sos" />

    <com.google.android.material.card.MaterialCardView
        app:cardElevation="@dimen/dimens_16dp"
        android:id="@+id/green_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_180dp"
        android:layout_margin="@dimen/dimens_16dp"
        app:cardBackgroundColor="@color/downy"
        app:cardCornerRadius="@dimen/dimens_16dp"
        app:layout_constraintTop_toBottomOf="@id/pink_card" />

    <TextView
        android:id="@+id/text_guard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_16dp"
        android:elevation="@dimen/dimens_16dp"
        android:text="@string/guard"
        android:textColor="@color/white"
        android:textSize="@dimen/dimens_24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card" />

    <TextView
        android:id="@+id/text_guard_msg"
        android:layout_width="@dimen/dimens_0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_16dp"
        android:elevation="@dimen/dimens_16dp"
        android:text="@string/guard_msg"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/image_guard"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        app:layout_constraintStart_toStartOf="@id/green_card"
        app:layout_constraintTop_toBottomOf="@id/text_guard" />

    <ImageView
        android:id="@+id/image_guard"
        android:layout_width="@dimen/dimens_96dp"
        android:layout_height="@dimen/dimens_96dp"
        android:layout_margin="@dimen/dimens_16dp"
        android:elevation="@dimen/dimens_16dp"
        android:src="@drawable/ic_guard"
        app:layout_constraintBottom_toBottomOf="@id/green_card"
        app:layout_constraintEnd_toEndOf="@id/green_card"
        app:layout_constraintTop_toTopOf="@id/green_card" />

</androidx.constraintlayout.widget.ConstraintLayout>